Fixed bg not showing

--- a/my-app/client/src/app/components/styles.css
+++ b/my-app/client/src/app/components/styles.css
@@ -4,7 +4,7 @@
 /* Basic styling for the sidebar */
 
 
-.sidebar {
+/* .sidebar {
     width: 200px;
     background-color: #f8f9fa;
     height: 100vh;
@@ -46,4 +46,4 @@ input[type=radio]{
 
 .star{
     cursor: pointer;
-}
+} */
